# RSEBlog

./: .markdownlint.yaml  .mlc_config.json  .pre-commit-config.yaml  .spellcheck.yml  .wordlist.txt  404.html  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  mlc_config.json  pyproject.toml  sitemap.xml
.github/actions/setup/: action.yml
.github/workflows/: check-links.yml  ci.yml  publish.yml  spellcheck.yml
archive/2024/: index.html
category/events/: index.html
docs/: .authors.yml  README.md
docs/overrides/partials/: footer.html
docs/posts/: 20211122_django_permissions.md  20220927_rsecon_2022.md  20230420_python_m1_mac.md  20240626_github_environment.md  20240722_pydata_london_2024.md  20240812_rslondonsoutheast_2024.md  20240920_rsecon_2024.md  20241021_hacktoberfest24.md  20241031_design_patterns_2024.md  20241127_tutorial_git_github.md  20241216_30day_map_challenge.md  20250120_rust.md  20250210_fusen.md  20250325_python_reproducible.md  20250425_coauthoring_commits.md  20250528_cw25.md  20250606_python_logging.md  20250617_sw4hw.md  20250815_rscs3doc.md  20260227_bokeh_django.md  DesignPatterns.md  design_patterns.md  django_permissions.md  github_environment.md  pydata_london_2024.md  python_m1_mac.md  r_dev_day_2024.md  rsecon_2022.md  rslondonsoutheast_2024.md
docs/stylesheets/: extra.css
search/: search_index.json
site/: 404.html
site/2024/06/26/adopting-a-more-rational-use-of-continuous-integration-with-github-actions/: index.html
stylesheets/: extra.css
tags/: index.html
