[tool.poetry]
name = "rseblog"
version = "0.1.0"
description = "Blog for Imperial's Central RSE Team"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.27"
pre-commit = "^3.7.1"
mkdocs-caption = "^1.2.0"
python-markdown-math = "^0.8"

[tool.poetry.group.docs.dependencies]
mkdocs-rss-plugin = "^1.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
