[project]
name = "RSEBlog"
version = "0.1.0"
description = "Blog for Imperial's Central RSE Team"
authors = [{ name = "Imperial College London RSE Team", email = "ict-rse-team@imperial.ac.uk" }]
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.0,<2",
    "mkdocs-material>=9.5.27,<10",
    "pre-commit>=3.7.1,<4",
    "mkdocs-caption>=1.2.0,<2",
    "python-markdown-math>=0.8,<0.10",
    "mkdocs-rss-plugin>=1.15.0,<2",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
